# us-consumer-finance-complaints

./: LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  setup.py
docs/: index.md
notebooks/: main.ipynb  sh_analyse.ipynb  test_agathe.ipynb
src/data/: preprocessing.py
