[tool.poetry]
name = "us-consumer-finance-complaints"
version = "0.1.0"
description = "US consumer complaints on financial products and company responses"
authors = ["Paul Steffen p.steffen@betclicgroup.com"]
repository = "https://github.com/PaulSteffen-betclic/US Consumer Finance Complaints"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
kaggle = "^1.5.12"
python-dotenv = "^0.19.2"
scikit-learn = "^1.0.2"
nltk = "^3.7"
plotly = "^5.6.0"

[tool.poetry.dev-dependencies]
mkdocs-material = "^8.1.9"
great_expectations = "^0.14.5"
pytest = "^7.0.0"
jupyter = "^1.0.0"
jupyterlab = "^3.2.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
